# snake

./: CMakeLists.txt  README.md  main.c  main2.c
include/: drawer.h  game.h  model.h
include/pdcurses/: curses.h  internet.h
src/: drawer.c  game.c  internet.c
